# cxfunc

./: .gitignore  CI_SETUP.md  CMakeLists.txt  LICENSE  README.md  cxHead.hh  cximg2png.cpp  setup_ci_badge.sh  setup_github_badge.sh  test_copy.cpp  validate_ci.sh
.github/workflows/: ci.yml
atomsphere/: CMakeLists.txt  LinkDef.h  atmosphere.cc  atmosphere.hh
atomsphere/cmake/: cxatomsphereConfig.in.cmake
compress/: .gitignore  CMakeLists.txt  LICENSE  LinkDef.h  README.md  cxFileIO.cc  cxFileIO.hh  xmake.lua
compress/.github/workflows/: ci.yml
compress/cmake/: cxfileioConfig.in.cmake
compress/test/: main.cpp
config/: .gitignore  CMakeLists.txt  ConfigBase.hh  ConfigJson.cc  ConfigJson.hh  ConfigManager.hh  ConfigRapidYml.cc  ConfigRapidYml.hh  ConfigTomlpp.cc  ConfigTomlpp.hh  ConfigYAML.cc  ConfigYAML.hh  LICENSE  LinkDef.h  README.md
config/.github/workflows/: ci.yml
config/test/: config.json  config.toml  config.yaml  main.cpp
crypt/: CMakeLists.txt  crypt.hh
crypt/cmake/: cxfunc_cryptConfig.in.cmake
error/: CMakeLists.txt  README.md  cxErrorTest.cpp  cxfunc_errorConfig.cmake.in  error_exit.hh
io/: CMakeLists.txt  read.cc  read.hh
maps/: CMakeLists.txt  README.md
maps/benchmark/: CMakeLists.txt  benchmark_maps.cpp
maps/examples/: CMakeLists.txt  axes_example.cpp
maps/include/cxfunc/: maps.hpp
maps/include/cxfunc/maps/: axes.hpp  version.hpp
maps/tests/: CMakeLists.txt  test_axes.cpp
math/: CMakeLists.txt  README.md
math/benchmark/: CMakeLists.txt  benchmark_math.cpp
math/examples/: CMakeLists.txt  basic_example.cpp  compare_outputs.cpp  math_comparison  math_comparison.cpp
math/include/cxfunc/: math.hpp
math/include/cxfunc/math/: gauss.hpp  interpolation.hpp  roots.hpp  version.hpp
math/tests/: CMakeLists.txt  test_gauss.cpp  test_interpolation.cpp  test_roots.cpp
modeling/: CMakeLists.txt
modeling/benchmark/: CMakeLists.txt  benchmark_modeling.cpp
modeling/examples/: CMakeLists.txt  modeling_comparison  modeling_comparison.cpp  spectral_example.cpp
modeling/include/cxfunc/: modeling.hpp
modeling/include/cxfunc/modeling/: parameters.hpp  spatial.hpp  spectral.hpp  version.hpp
modeling/tests/: CMakeLists.txt  test_spectral.cpp
nkg/: CMakeLists.txt  LinkDef.h  NKG.cc  NKG.hh
nkg/cmake/: cxnkgConfig.in.cmake
pause/: CMakeLists.txt  LinkDef.h  pause.cc  pause.hh
pause/cmake/: cxfunc_pauseConfig.in.cmake
poisson/: CMakeLists.txt  README.md  cxPoisson.hh  p1_test.cpp  pois_eb.txt
poisson/cmake/: cxfunc_poissonConfig.in.cmake
random/: CMakeLists.txt  LinkDef.h  README.md  cxRandomSeed3.cc  randomSeed3.cc  randomSeed3.hh
random/.github/workflows/: ci.yml
random/test/: main.cpp
root/: CMakeLists.txt  LinkDef.h  check.cpp  funcROOT.cc  funcROOT.hh  p1_resetLog.cpp
stats/: .gitignore  CMakeLists.txt  README.md
stats/benchmark/: CMakeLists.txt  benchmark_stats.cpp
stats/examples/: CMakeLists.txt  basic_example.cpp  onoff_test.cpp
stats/include/cxfunc/: stats.hpp
stats/include/cxfunc/stats/: counts_statistic.hpp  fit_statistics.hpp  utils.hpp  variability.hpp  version.hpp
stats/tests/: CMakeLists.txt  test_stats.cpp
swapbyte/: CMakeLists.txt  LinkDef.h  swapbyte.cc  swapbyte.hh
timer/: BENCHMARK_COMPARISON.md  CMakeLists.txt  README.md  benchmark.hh  benchmark2.hh  benchmark_example.cpp  cxHeaderTest.cpp  cxRandCompare.cpp  test_benchmark2.cpp
timer/cmake/: cxfunc_timerConfig.in.cmake
